FIXUP: CHROMIUM: esdfs: Export get_proc_ns.

Build ESDFS on 3.18 fails with:

ERROR: "get_proc_ns" [fs/esdfs/esdfs.ko] undefined!

Export the symbol to fix the problem.

BUG=chromium:845052
BUG=b:63876697
TEST=emerge-elm --nodeps sys-kernel/chromeos-kernel-3_18

Change-Id: I89117bf02266f024e22f158050ebb829e09ee6d5
Signed-off-by: Shuhei Takahashi <nya@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/1065720
Reviewed-by: Junichi Uekawa <uekawa@chromium.org>