fs/proc/namespaces.c
@@ -294,6 +294,7 @@ struct proc_ns *get_proc_ns(struct inode *inode)
 {
 	return &PROC_I(inode)->ns;
 }
+EXPORT_SYMBOL(get_proc_ns);
 
 bool proc_ns_inode(struct inode *inode)
 {
